settings for dataproc jar build