@@ -102,6 +102,10 @@ saveHybridAddresses(historical=true, skinny=true)
 where the first boolean is for a historic index, second for a skinny index. Note that you can also hard-code the index name, and you also need to ensure
 that the variable `localTarget` is set to true in `build.sbt`
 
+You may have to add the following to the VM Options box in the run configuration
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+
+
 ## Running Tests
 
 Before you can run tests on this project if using Windows you must
